--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   .clock {
     width: 300px;
     height: 300px;
-    background-color: rgba(142, 162, 224, 0.8);
+    background-color: rgba(15, 17, 22, 0.8);
     border-radius: 50%;
     border: 2px solid black;
     position: relative;
@@ -29,6 +29,8 @@
     text-align: center;
     transform: rotate(var(--rotation));
     font-size: 1.5rem;
+    color: rgb(240, 231, 231);
+   
   }
   
   .clock .number1 { --rotation: 30deg; }
@@ -78,11 +80,11 @@
   .clock .hand.minute {
     width: 7px;
     height: 40%;
-    background-color: black;
+    background-color: #2e37b7;
   }
   
   .clock .hand.hour {
     width: 10px;
-    height: 35%;
-    background-color: black;
+    height: 33%;
+    background-color: rgb(20, 113, 60);
   }
